<resources>
    <string name="app_name">My Application</string>
    <string name="send">send</string>
    <string name="button">button</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="imgv">imageView</string>
    <string name="imgb">imageButton</string>
    <string name="scrollview">ScrollView</string>
    <string name="spinner">Spinner</string>
    />
</resources>