<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:text="@string/button" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/imgb" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:contentDescription="@string/imgv" />

</LinearLayout>